manifests/laravel-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: “true”
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - myproject-local.com
      secretName: tls-certificate
  rules:
    - host: myproject-local.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sample-app-service
              servicePort: 80
